--- a/styles/style.css
+++ b/styles/style.css
@@ -173,6 +173,7 @@ nav > ul > li:hover ul {
 .my-work-sec {
   width: 100%;
   padding: 5rem;
+  background-color: rgba(229, 229, 229, 0.611);
 }
 .my-work-container {
   display: flex;
@@ -181,14 +182,14 @@ nav > ul > li:hover ul {
   justify-content: center;
   flex-wrap: wrap;
 }
-.my-work-sec h2{
+.my-work-sec h2 {
   font-size: 3rem;
   font-weight: 800;
   text-align: center;
-  margin:-1rem 0 4rem 0 ;
+  margin: -1rem 0 4rem 0;
 }
 .my-work-container .column {
-  width:300px;
+  width: 300px;
 }
 .my-work-container .column img {
   width: 100%;
@@ -196,10 +197,67 @@ nav > ul > li:hover ul {
 .column {
   background: #e0e0e0;
   box-shadow: 1px 6px 23px #d0d0d0, -6px -6px 23px #f0f0f0;
-  transition: transform .2s linear;
+  transition: transform 0.2s linear;
 }
-.column:hover{
+.column:hover {
   transform: scale(1.1);
   box-shadow: 1px 6px 50px #d0d0d0, -6px -6px 50px #f0f0f0;
+}
 
+/* Testimonials section */
+.testimonials-sec{
+  width: 100%;
+  padding: 4rem;
+  background: url('../images/header-bg.png'),linear-gradient(rgb(0, 0, 0),black);
+  display: grid;
+  align-items: center;
+  justify-content: center;
+}
+.testimonials-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.card{
+  width: 250px;
+  box-shadow: 1px 2px 10px rgba(128, 128, 128, 0.338);
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 5px;
+  transition:all .3s linear;
+}
+.card .img-holder{
+  width: 100px;
+  margin: auto;
+  margin-bottom: 1rem;
+}
+.img-holder img{
+  width:100%;
+}
+.testimonials-sec > .test-title{
+  font-size: 2.5rem;
+  text-align:center;
+  margin-bottom: 2rem;
+}
+.card h3{
+  font-size: 20px;
+  font-family: sans-serif;
+}
+.card h6{
+  color: #13d5c580;
+  font-size: .9rem;
+  margin-top: .4rem;
+  font-style: italic;
+}
+.card p{
+  font-size: 15px;
+  color: #6a6a6ad8;
+  margin: .6rem 0;
+}
+.card:hover{
+  box-shadow: 1px 2px 30px rgba(128, 128, 128, 0.454);
+  background-color: #ffffffde;
+  outline: 2px solid rgba(0, 0, 255, 0.127);
 }
