--- a/styles/style.css
+++ b/styles/style.css
@@ -205,59 +205,101 @@ nav > ul > li:hover ul {
 }
 
 /* Testimonials section */
-.testimonials-sec{
+.testimonials-sec {
   width: 100%;
   padding: 4rem;
-  background: url('../images/header-bg.png'),linear-gradient(rgb(0, 0, 0),black);
+  background: url("../images/header-bg.png"),
+    linear-gradient(rgb(0, 0, 0), black);
   display: grid;
   align-items: center;
   justify-content: center;
 }
-.testimonials-container{
+.testimonials-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 2rem;
 }
-.card{
+.card {
   width: 250px;
   box-shadow: 1px 2px 10px rgba(128, 128, 128, 0.338);
   background-color: #fff;
   padding: 1rem;
   border-radius: 5px;
-  transition:all .3s linear;
+  transition: all 0.3s linear;
 }
-.card .img-holder{
+.card .img-holder {
   width: 100px;
   margin: auto;
   margin-bottom: 1rem;
 }
-.img-holder img{
-  width:100%;
+.img-holder img {
+  width: 100%;
 }
-.testimonials-sec > .test-title{
+.testimonials-sec > .test-title {
   font-size: 2.5rem;
-  text-align:center;
+  text-align: center;
   margin-bottom: 2rem;
 }
-.card h3{
+.card h3 {
   font-size: 20px;
   font-family: sans-serif;
 }
-.card h6{
+.card h6 {
   color: #13d5c580;
-  font-size: .9rem;
-  margin-top: .4rem;
+  font-size: 0.9rem;
+  margin-top: 0.4rem;
   font-style: italic;
 }
-.card p{
+.card p {
   font-size: 15px;
   color: #6a6a6ad8;
-  margin: .6rem 0;
+  margin: 0.6rem 0;
 }
-.card:hover{
+.card:hover {
   box-shadow: 1px 2px 30px rgba(128, 128, 128, 0.454);
   background-color: #ffffffde;
   outline: 2px solid rgba(0, 0, 255, 0.127);
+}
+/* footer */
+footer {
+  width: 100%;
+  padding: 5rem;
+  display: flex;
+  background-color: #000;
+  align-items: center;
+  justify-content: center;
+}
+.footer-columns {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8rem;
+  justify-content: space-around;
+}
+.fab {
+  margin-right: 1rem !important;
+}
+.fa-facebook {
+  color: rgb(78, 166, 244) !important;
+}
+.fa-twitter{
+  color: rgb(83, 219, 252) !important;
+}
+.fa-instagram{
+  color: rgb(244, 139, 78) !important;
+}
+.footer-column h3 {
+  color: #ffffff;
+  margin-bottom: 1.4rem;
+}
+
+.footer-column * {
+  color: #a0a0a0;
+  margin: 10px 0;
+}
+.footer-column *:hover {
+  color: #ffffff;
 }
